[metadata]
name = spaz
version = 0.0.1
description = Platform to streamline data analysis tasks

[options]
packages = find:
package_dir = 
    =lib
include_package_data = true

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    spaz
